--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "jsx": "react",
-    "lib": ["es6", "dom", "esnext"],
+    "lib": ["es6", "esnext"],
     "module": "esnext",
-    "moduleResolution": "node",
     "noImplicitAny": false,
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
-    "outDir": "dist"
+    "target": "es2023",
+    "outDir": "dist",
+    "moduleResolution": "bundler",
   },
   "include": ["src/**/*.ts",],
 }
